added support for optional/variadic arguments count